Added a console log in GA trigger, again

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,17 @@
       crossorigin="anonymous"
     />
     <title>DJ EditTrax</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X7FDGNLGYJ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-X7FDGNLGYJ');
+    </script>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
