--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,27 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+
+    <!-- Primary Meta Tags -->
+    <title>Renegade Dj Edits</title>
+    <meta name="title" content="Renegade Dj Edits">
+    <meta name="description" content="For 1 of 1 selectors - An interactive music collectible, with integrated digital audio workstation and token gated download mechanism.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://edittrax.com/">
+    <meta property="og:title" content="Renegade Dj Edits">
+    <meta property="og:description" content="For 1 of 1 selectors - An interactive music collectible, with integrated digital audio workstation and token gated download mechanism.">
+    <meta property="og:image" content="/src/assets/thumbnail.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://edittrax.com/">
+    <meta property="twitter:title" content="Renegade Dj Edits">
+    <meta property="twitter:description" content="For 1 of 1 selectors - An interactive music collectible, with integrated digital audio workstation and token gated download mechanism.">
+    <meta property="twitter:image" content="/src/assets/thumbnail.jpg">
+
+    
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
@@ -26,7 +43,6 @@
 
       gtag('config', 'G-X7FDGNLGYJ');
     </script>
-    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
