Added metadata image

--- a/public/index.html
+++ b/public/index.html
@@ -16,16 +16,15 @@
     <meta property="og:url" content="https://edittrax.com/">
     <meta property="og:title" content="Renegade Dj Edits">
     <meta property="og:description" content="For 1 of 1 selectors - An interactive music collectible, with integrated digital audio workstation and token gated download mechanism.">
-    <meta property="og:image" content="/src/assets/thumbnail.jpg">
+    <meta property="og:image" content="@images/thumbnail.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://edittrax.com/">
     <meta property="twitter:title" content="Renegade Dj Edits">
     <meta property="twitter:description" content="For 1 of 1 selectors - An interactive music collectible, with integrated digital audio workstation and token gated download mechanism.">
-    <meta property="twitter:image" content="/src/assets/thumbnail.jpg">
+    <meta property="twitter:image" content="../src/assets/thumbnail.jpg">
 
-    
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
