--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/thumbnail.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://edittrax.com/">
     <meta property="og:title" content="Renegade Dj Edits">
     <meta property="og:description" content="For 1 of 1 selectors - An interactive music collectible, with integrated digital audio workstation and token gated download mechanism.">
-    <meta property="og:image" content="@images/thumbnail.jpg">
+    <meta property="og:image" content="https://i.postimg.cc/tC265rBh/thumbnail.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
