setting up how to user flow

--- a/public/index.html
+++ b/public/index.html
@@ -7,22 +7,22 @@
     <meta name="theme-color" content="#000000" />
 
     <!-- Primary Meta Tags -->
-    <title>Renegade Dj Edits</title>
-    <meta name="title" content="Renegade Dj Edits">
-    <meta name="description" content="For 1 of 1 selectors - An interactive music collectible, with integrated digital audio workstation and token gated download mechanism.">
+    <title>EditTrax</title>
+    <meta name="EditTrax" content="For 1 of 1 selectors - Interactive Trax by BAI-EE">
+    <meta name="description" content="For 1 of 1 selectors - Interactive Trax by BAI-EE">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://edittrax.com/">
     <meta property="og:title" content="Renegade Dj Edits">
-    <meta property="og:description" content="For 1 of 1 selectors - An interactive music collectible, with integrated digital audio workstation and token gated download mechanism.">
+    <meta property="og:description" content="For 1 of 1 selectors - Interactive Trax by BAI-EE">
     <meta property="og:image" content="https://i.postimg.cc/tC265rBh/thumbnail.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://edittrax.com/">
     <meta property="twitter:title" content="Renegade Dj Edits">
-    <meta property="twitter:description" content="For 1 of 1 selectors - An interactive music collectible, with integrated digital audio workstation and token gated download mechanism.">
+    <meta property="twitter:description" content="For 1 of 1 selectors - Interactive Trax by BAI-EE">
     <meta property="twitter:image" content="../src/assets/thumbnail.jpg">
 
     <link
