--- a/public/index.html
+++ b/public/index.html
@@ -14,14 +14,14 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://edittrax.com/">
-    <meta property="og:title" content="Renegade Dj Edits">
+    <meta property="og:title" content="Renegade Edits">
     <meta property="og:description" content="For 1 of 1 selectors - Interactive Trax by BAI-EE">
     <meta property="og:image" content="https://i.postimg.cc/tC265rBh/thumbnail.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://edittrax.com/">
-    <meta property="twitter:title" content="Renegade Dj Edits">
+    <meta property="twitter:title" content="Renegade Edits">
     <meta property="twitter:description" content="For 1 of 1 selectors - Interactive Trax by BAI-EE">
     <meta property="twitter:image" content="../src/assets/thumbnail.jpg">
 
