--- a/public/index.html
+++ b/public/index.html
@@ -8,21 +8,23 @@
 
     <!-- Primary Meta Tags -->
     <title>EditTrax</title>
-    <meta name="EditTrax" content="For 1 of 1 selectors - Interactive Trax by BAI-EE">
-    <meta name="description" content="For 1 of 1 selectors - Interactive Trax by BAI-EE">
+    <meta name="EditTrax" content="For 1 of 1 Selectors - Interactive Trax by BAI-EE">
+    <meta name="description" content="For 1 of 1 Selectors - Interactive Trax by BAI-EE">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://edittrax.com/">
     <meta property="og:title" content="Renegade Edits">
-    <meta property="og:description" content="For 1 of 1 selectors - Interactive Trax by BAI-EE">
-    <meta property="og:image" content="https://i.postimg.cc/tC265rBh/thumbnail.jpg">
+    <meta property="og:description" content="For 1 of 1 Selectors - Interactive Trax by BAI-EE">
+    <!-- <meta property="og:image" content="https://i.postimg.cc/tC265rBh/thumbnail.jpg"> -->
+    <meta property="og:image" content="../src/assets/thumbnail.jpg">
+    
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://edittrax.com/">
     <meta property="twitter:title" content="Renegade Edits">
-    <meta property="twitter:description" content="For 1 of 1 selectors - Interactive Trax by BAI-EE">
+    <meta property="twitter:description" content="For 1 of 1 Selectors - Interactive Trax by BAI-EE">
     <meta property="twitter:image" content="../src/assets/thumbnail.jpg">
 
     <link
@@ -31,7 +33,7 @@
       integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
       crossorigin="anonymous"
     />
-    <title>DJ EditTrax</title>
+    <title>EditTrax</title>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-X7FDGNLGYJ"></script>
