--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
     <meta property="og:url" content="https://edittrax.com/">
     <meta property="og:title" content="Renegade Edits">
     <meta property="og:description" content="For 1 of 1 Selectors - Interactive Trax by BAI-EE">
-    <!-- <meta property="og:image" content="https://i.postimg.cc/tC265rBh/thumbnail.jpg"> -->
-    <meta property="og:image" content="../src/assets/thumbnail.jpg">
+    <meta property="og:image" content="https://i.postimg.cc/TY0xxfQx/Twitter-post-1.jpg">
+    <!-- <meta property="og:image" content="../src/assets/thumbnail.jpg"> -->
     
 
     <!-- Twitter -->
@@ -25,7 +25,7 @@
     <meta property="twitter:url" content="https://edittrax.com/">
     <meta property="twitter:title" content="Renegade Edits">
     <meta property="twitter:description" content="For 1 of 1 Selectors - Interactive Trax by BAI-EE">
-    <meta property="twitter:image" content="../src/assets/thumbnail.jpg">
+    <meta property="twitter:image" content="https://i.postimg.cc/TY0xxfQx/Twitter-post-1.jpg">
 
     <link
       rel="stylesheet"
